Cors fix, https enabled